--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+body {
+  font-family: 'Baloo 2', sans-serif;
+}
+/* @layer base {
   h1, h2, h3, h4, h5, h6 {
     @apply font-TimesNewRoman;
   }
-}
+} */
